force-app/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <description>Location Object. It is the link between an Address and a Contact or Account.</description>
    <label>Location</label>
    <nameField>
        <displayFormat>L-{0000000000}</displayFormat>
        <label>Location Salesforce ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>