force-app/main/default/objects/Location__c/fields/AddressType__c.field-meta.xml
<CustomField>
    <fullName>AddressType__c</fullName>
    <description>(R1-S1 by JD): Address Type, coming from Klopotk via the Interface.</description>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>V/P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>