force-app/main/default/objects/Location__c/fields/CityTxt__c.field-meta.xml
<CustomField>
    <fullName>CityTxt__c</fullName>
    <description>This field enhances the Search results. It is filled by a workflow</description>
    <label>CityTxt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>