force-app/main/default/objects/Location__c/fields/LocationKlopotekID__c.field-meta.xml
<CustomField>
    <fullName>LocationKlopotekID__c</fullName>
    <description>(R1-S1 by JD): Location Klopotek ID.</description>
    <label>Location Klopotek ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>