force-app/main/default/objects/Location__c/fields/OperatingCompany__c.field-meta.xml
<CustomField>
    <fullName>OperatingCompany__c</fullName>
    <description>Operating Company as shown on the Address-object</description>
    <formula>TEXT(Address__r.OperatingCompany__c)</formula>
    <inlineHelpText>Operating Company as shown on the Address-object</inlineHelpText>
    <label>Operating Company</label>
    <type>Text</type>
</CustomField>