force-app/main/default/objects/Location__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <formula>IF(  
     AND(
          ISBLANK(Address__r.Street__c), 
          NOT( ISBLANK(Address__r.POBox__c) 
              ) 
         ) , 
    Address__r.POBox__c, 
     
   IF( 
       AND(
            ISBLANK(Address__r.POBox__c), 
            NOT( ISBLANK(Address__r.Street__c)
                )
           ) , 
      Address__r.Street__c, &quot;&quot;
           ) 
      )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>