force-app/main/default/objects/Location__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>(R1-S1 by JD); Location Type: (Visiting, Postal...)</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>