force-app/main/default/objects/Location__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <formula>Address__r.ZIPPostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zipcode</label>
    <type>Text</type>
</CustomField>